chore: remove extra social icon from signin/login form and fix alignment

--- a/client-portal/src/pages/public/signIn/signIn.scss
+++ b/client-portal/src/pages/public/signIn/signIn.scss
@@ -147,7 +147,6 @@
       padding: 1.25rem 0;
       display: flex;
       align-items: center;
-      justify-content: center;
       flex-direction: column;
       height: 100%;
       max-height: 26.875rem;
@@ -155,12 +154,6 @@
       .topIcons {
         img {
           margin: 0 0.625rem;
-        }
-      }
-
-      .bottomIcon {
-        img {
-          margin-top: 2.5rem;
         }
       }
 
